--- a/permissions/serverless.yml
+++ b/permissions/serverless.yml
@@ -23,6 +23,7 @@ inputs:
         - dynamodb:PutItem
         - dynamodb:UpdateItem
         - dynamodb:DeleteItem
+        - dynamodb:Scan
       Resource:
         - ${output:database.arn}
         - ${output:database.arn}/index/*
