add scan to get all items

--- a/database/serverless.yml
+++ b/database/serverless.yml
@@ -29,3 +29,9 @@ inputs:
           KeyType: RANGE
       Projection:
         ProjectionType: ALL
+custom:
+  customDomain:
+    domainName: tulipshoptavern.chrisubick.io
+    basePath: ''
+    stage: ${self:provider.stage}
+    createRoute53Record: true
