--- a/database/serverless.yml
+++ b/database/serverless.yml
@@ -29,6 +29,8 @@ inputs:
           KeyType: RANGE
       Projection:
         ProjectionType: ALL
+plugins:
+  - serverless-domain-manager
 custom:
   customDomain:
     domainName: tulipshoptavern.chrisubick.io
