--- a/site/package.json
+++ b/site/package.json
@@ -6,17 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
+    "axios": "^0.21.1",
     "js-cookie": "^2.2.1",
     "moment": "^2.24.0",
-    "react-router-dom": "^5.1.2",
-    "axios": "^0.21.1",
+    "react": "^16.13.1",
+    "react-cookie": "^4.0.3",
+    "react-dom": "^16.13.1",
     "react-hook-form": "^6.13.1",
     "react-instagram-embed": "^1.5.0",
-    "react-virtualized-auto-sizer": "^1.0.2",
-    "react-window": "^1.8.6",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.3",
     "typescript": "^4.1.3"
   },
   "scripts": {
