--- a/site/package.json
+++ b/site/package.json
@@ -10,10 +10,12 @@
     "js-cookie": "^2.2.1",
     "moment": "^2.24.0",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.13.1",
     "react-instagram-embed": "^1.5.0",
+    "react-overlay-component": "^1.0.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.3",
     "typescript": "^4.1.3"
