--- a/site/package.json
+++ b/site/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.13.1",
     "react-instagram-embed": "^1.5.0",
-    "react-overlay-component": "^1.0.2",
+    "react-responsive-modal": "^6.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.3",
     "typescript": "^4.1.3"
